# speech_2_text

./: .gitignore  README.md  main.py  pyproject.toml  test_torchaudio.py  transcribe.py
static/: style.css
templates/: index.html
